set earnings + referrals in rep onboarding #4464

--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -78,6 +78,24 @@
 
 		<br/><br/><br/>
 
+		<h2 class="title">Earnings - Referral Code</h2>
+
+		<ul ng-class="{'submitted':submitted}" class="ul-inputs">
+
+			<li class="li-input">
+				<div class="label">How much a marketing rep earns from new customer referrals:</div>
+				<div class="input"><input type="number" ignore-mouse-wheel ng-model="driver.referral_admin_credit" placeholder=""></div>
+			</li>
+
+			<li class="li-input">
+				<div class="label">Credit amount to customer:</div>
+				<div class="input"><input type="number" ignore-mouse-wheel ng-model="driver.referral_customer_credit" placeholder=""></div>
+			</li>
+
+		</ul>
+
+		<br/><br/><br/>
+
 		<h2 class="title">Additional Info</h2>
 
 		<ul ng-class="{'submitted':submitted}" class="ul-inputs">
