--- a/include/views/default/cockpit/giftcards/new.phtml
+++ b/include/views/default/cockpit/giftcards/new.phtml
@@ -15,12 +15,7 @@
 <div class="container-fluid padded">
 	<div class="row-fluid">
 		<div class="span6">
-			
-			
-			
-			
-			
-				<div class="box">
+			<div class="box">
 				<div class="box-header">
 					<span class="title">Essential Information</span>
 				</div>
@@ -37,21 +32,55 @@
 							<span class="pull-right">
 								<select name="paid_by" id="paid_by" class="uniform">
 									<option value=""></option>
-									<option value="crunchbutton">crunchbutton</option>
+									<option selected="selected" value="crunchbutton">crunchbutton</option>
 									<option value="restaurant">restaurant</option>
 									<option value="promotional">promotional</option>
 									<option value="other_restaurant">other_restaurant</option>
 								</select>
 							</span>
 						</li>
+						
 					</ul>
 				</div>
+				
 			</div>
-			
-			
-			
-			
-			
+		
+		<?php if( $this->user ) { ?>
+		<!--notification box-->
+		<div class="box">
+				<div class="box-header">
+					<span class="title">Notifications</span>
+				</div>
+				<div class="box-content ">
+					<ul class="box-list">
+						<li>
+							<span>Notify by email (<?php  echo $this->user->email; ?>)</span>
+							<span class="pull-right">
+								<input type="checkbox" name="notify_by_email" id="notify_by_email" class="iButton-icons">
+							</span>
+						</li>
+						<li>
+							<span>Notify by phone (<?php  echo $this->user->phone; ?>)</span>
+							<span class="pull-right">
+								<input type="checkbox" name="notify_by_sms" id="notify_by_sms" class="iButton-icons">
+							</span>
+						</li>
+						<li>
+							<span>Add as credit</span>
+							<span class="pull-right">
+								<input type="checkbox" name="add_as_credit" id="add_as_credit">
+							</span>
+							<hr />
+							<div class="note large">
+								If you check this option the user will receive the credit without the need to redeem it. The user will not be notified.
+							</div>
+						</li>
+					</ul>
+				</div>
+				
+			</div>
+			<?php } ?>
+<!--end notification box-->
 			<div class="box">
 				<div class="box-header">
 					<span class="title">Promo code</span>
@@ -75,18 +104,6 @@
 							<span class="pull-right">
 								<input type="text" readonly="readonly" id="user_name" name="user_name" value="<?php echo $this->user->name;?>">
 								<input type="hidden" id="id_user" name="id_user" value="<?php echo $this->user->id_user;?>">
-							</span>
-						</li>
-						<li>
-							<span>Notify by email (<?php  echo $this->user->email; ?>)</span>
-							<span class="pull-right">
-								<input type="checkbox" name="notify_by_email" id="notify_by_email" class="iButton-icons">
-							</span>
-						</li>
-						<li>
-							<span>Notify by phone (<?php  echo $this->user->phone; ?>)</span>
-							<span class="pull-right">
-								<input type="checkbox" name="notify_by_sms" id="notify_by_sms" class="iButton-icons">
 							</span>
 						</li>
 						<li>
@@ -140,18 +157,6 @@
 								</select>
 							</span>
 						</li>
-						<?php if( $this->user ) { ?>
-						<li>
-							<span>Add as credit</span>
-							<span class="pull-right">
-								<input type="checkbox" name="add_as_credit" id="add_as_credit">
-							</span>
-							<hr />
-							<div class="note large">
-								If you check this option the user will receive the credit without the need to redeem it. The user will not be notified.
-							</div>
-						</li>
-						<?php } ?>
 					</ul>
 				</div>
 			</div>
