Track how long communities are force closed every day #4446

--- a/include/views/default/cockpit2/frontend/communities/communities-community.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities-community.phtml
@@ -81,5 +81,49 @@
 	<div class="bar-loader bar-loader-drivers" ng-class="{'bar-loader-loading': loadingStaff}"></div>
 	<ng-include src="'assets/view/listview-staff.html'"></ng-include>
 
+	<br><br>
+
+	<h1 class="title"><i class="fa fa-link"></i>Aliases</h1>
+
+	<div class="box-content2 box-content-table">
+		<table class="tb-zebra">
+			<tr>
+				<th>Alias</th>
+				<th>Preposition</th>
+				<th>Alternative name</th>
+			</tr>
+			<tr ng-repeat="a in aliases">
+				<td>{{a.alias}}</td>
+				<td>{{a.prep}}</td>
+				<td>{{a.name_alt}}</td>
+			</tr>
+		</table>
+	</div>
+
+	<br><br>
+	<h1 class="title"><i class="fa fa fa-list"></i>Open/Close Log</h1>
+	<div class="box-content2 box-content-table">
+		<table class="tb-zebra">
+			<tr>
+				<th>Type</th>
+				<th>Closed at</th>
+				<th>Closed By</th>
+				<th>Closed Notes</th>
+				<th>How long</th>
+				<th>Opened at</th>
+				<th>Opened by</th>
+			</tr>
+			<tr ng-repeat="c in closelogs">
+					<td>{{c.type}}</td>
+				<td>{{c.closed_at}}</td>
+				<td>{{c.closed_by}}</td>
+				<td>{{c.note}}</td>
+				<td>{{c.how_long}}</td>
+				<td>{{c.opened_at}}</td>
+				<td>{{c.opened_by}}</td>
+			</tr>
+		</table>
+	</div>
+
 
 </div>
