--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3566,3 +3566,6 @@ input[type="checkbox"].switch + div:before {
 	margin-bottom: 2em;
 	font-size: 1.2em;
 }
+.support-side-image {
+	max-width: 250px;
+}
