--- a/include/views/default/crunchbutton/home/index.phtml
+++ b/include/views/default/crunchbutton/home/index.phtml
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <script type="application/ld+json">
 {
    "@context": "http://schema.org",
@@ -286,3 +287,4 @@
 $ = null;
 </script>
 <? endif ; ?>
+</html>
