--- a/include/views/default/crunchbutton/home/index.phtml
+++ b/include/views/default/crunchbutton/home/index.phtml
@@ -6,7 +6,7 @@
    "url": "http://dev.crunchr.co/?__seo=1",
    "potentialAction": {
      "@type": "SearchAction",
-     "target": "http://dev.crunchr.co/?__seo=1&search?q={search_term_string}",
+     "target": "http://dev.crunchr.co/?__seo=1/search?q={search_term_string}",
      "query-input": "required name=search_term_string"
    }
 }
