--- a/include/views/default/crunchbutton/home/index.phtml
+++ b/include/views/default/crunchbutton/home/index.phtml
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<head>
 <script type="application/ld+json">
 {
    "@context": "http://schema.org",
@@ -11,6 +12,7 @@
    }
 }
 </script>
+</head>
 <?
 	$bot = c::app()->isBot() || $_REQUEST['__seo'];
 	
