--- a/include/views/default/crunchbutton/home/index.phtml
+++ b/include/views/default/crunchbutton/home/index.phtml
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<!--<script type="application/ld+json">
+<script type="application/ld+json">
 {
    "@context": "http://schema.org",
    "@type": "WebSite",
@@ -11,7 +11,7 @@
      "query-input": "required name=search_term_string"
    }
 }
-</script>-->
+</script>
 
 
 </head>
