--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -115,6 +115,8 @@
 							<li class="dropdown-divider"></li>
 							<li><a ng-click="navigation.link('/help')"><i class="fa fa-heart"></i>Help</a></li>
 							<li><a ng-click="navigation.link('/about')"><i class="fa fa-lightbulb-o"></i>About</a></li>
+							<li><a ng-click="navigation.link('/jobs')"><i class="fa fa-briefcase"></i>Jobs</a></li>
+
 							<li><a ng-click="navigation.signin()" ng-show="!account.user.id_user"><i class="fa fa-sign-in"></i>Log In</a></li>
 							<li><a ng-click="signout.signout()" ng-show="account.user.id_user"><i class="fa fa-sign-out"></i>Log Out</a></li>
 
