--- a/include/views/mail/crunchbutton/driver/notification/welcome.phtml
+++ b/include/views/mail/crunchbutton/driver/notification/welcome.phtml
@@ -5,7 +5,7 @@
 	Hey <?php echo $name; ?>,
 </p>
 <p>
-	Access <a href="<?php echo $url; ?>"><?php echo $url; ?></a> using Chrome as your browser to set up your driver account.
+	Visit <a href="<?php echo $url; ?>"><?php echo $url; ?></a> using Chrome as your browser to set up your driver account.
 </p>
 <p>
 	Thanks,<br />
