--- a/include/views/mail/crunchbutton/order/index.phtml
+++ b/include/views/mail/crunchbutton/order/index.phtml
@@ -180,7 +180,7 @@ if( $this->cockpit_url ){
 if( $this->cockpit_url ) { ?>
 	<table cellpadding="0" cellspacing="0" style="width: 100%; margin-top: 20px;">
 		<tr>
-			<td style="text-align: left; font-weight:bold;" class="text-size-small">Access: <a style="color:#000;" target="_blank" href="<?php echo $this->cockpit_url; ?>"><?php echo $this->cockpit_url; ?></a></td>
+			<td style="text-align: left; font-weight:bold;" class="text-size-small">Visit: <a style="color:#000;" target="_blank" href="<?php echo $this->cockpit_url; ?>"><?php echo $this->cockpit_url; ?></a></td>
 		</tr>
 	</table>
 <?php } ?>
