--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -62,7 +62,6 @@
 				<div class="divider"></div>
 			</div>
 		</div>
-
 	</div>
 
 
@@ -109,8 +108,20 @@
 
 <div class="content-padding">
 
-	<div class="dialog-message dialog-message-notice check-reminder"  ng-if="order.status.status != 'delivered' && order.status.status != 'rejected' && order.status.driver.id_admin == account.user.id_admin">
+	<div class="dialog-message dialog-message-notice check-reminder" ng-if="order.status.status != 'delivered' && order.status.status != 'rejected' && order.status.driver.id_admin == account.user.id_admin">
 		<b>Double check</b> to make sure you received exactly the right food!
+	</div>
+
+	<div ng-if="order.status.status != 'accepted' && order.status.status != 'delivered' && order.status.status != 'rejected' && order.status.driver.id_admin == account.user.id_admin">
+		<div ng-show="!text_customer_5_min_away_sending">
+			<button ng-click="text_customer_5_min_away()" class="button orange-on-orange">Text Customer I'm 5 Min Away</button>
+		</div>
+		<div ng-show="text_customer_5_min_away_sending">
+			<button class="button orange-on-orange">
+				<i class="fa fa-circle-o-notch fa-spin"></i> Sending
+			</button>
+		</div>
+		</div>
 	</div>
 
 	<div class="header order-header">
