--- a/include/views/mail/crunchbutton/order/details.phtml
+++ b/include/views/mail/crunchbutton/order/details.phtml
@@ -30,10 +30,10 @@ if( $version == 'customer' ){
 			<td class="topitem">Price</td>
 		<?php } ?>
 	</thead>
-	<? foreach ($order->dishes() as $dish) : ?>
+	<?php foreach ($order->dishes() as $dish) { ?>
 		<tr>
 			<td class="fooditem">1</td>
-			<td class="fooditem"><?
+			<td class="fooditem"><?php
 				$food = $dish->dish()->name;
 				$price = $dish->dish()->price;
 				$regular_price = $dish->dish()->price;
@@ -125,7 +125,7 @@ if( $version == 'customer' ){
 				$food .= $withOptions;
 				$food .= $selectOptions;
 				?>
-				<?=$food?>
+				<?php echo $food; ?>
 			</td>
 			<td style="width: 1%;" class="fooditem">
 				$<?php
@@ -142,7 +142,7 @@ if( $version == 'customer' ){
 			</td>
 			<?php } ?>
 		</tr>
-	<? endforeach ; ?>
+	<?php } ?>
 
 	<tr class="class">
 		<td></td>
@@ -183,48 +183,53 @@ if( $version == 'customer' ){
 	$showTipAndDeliveryFee = !( $viewer == 'restaurant' && $order->restaurant()->delivery_service );
 
 	if( $showTipAndDeliveryFee ){
-		if ( $order->pay_type == 'card' && $order->tip ) : ?>
+		if ( $order->pay_type == 'card' && $order->tip ) { ?>
 			<tr>
 				<td></td>
-				<td style="text-align:right">Tip <?php if( $order->tip_type != Crunchbutton_Order::TIP_NUMBER ) { echo $order->tip . '%'; } ?></td>
-				<td>$<?=$order->tip()?></td>
+				<td style="text-align:right">Tip <?php
+				 if( $order->tip_type != Crunchbutton_Order::TIP_NUMBER ) { echo $order->tip . '%'; }
+				 ?></td>
+				<td>$<?php echo $order->tip()?></td>
 				<?php if( $isDriverCockpit ) { ?>
 				<td style="font-size:12px;color:#666;">
-					$<?php echo number_format( 0, 2 ); ?>
+					$0.00
 				</td>
 				<?php } ?>
 			</tr>
-		<? endif ;
+		<?php }
 	}
 
 	if( $showTipAndDeliveryFee ){
-		 if ( $order->restaurant()->delivery_fee ) : ?>
+
+		 if ( $order->restaurant()->delivery_fee ) { ?>
 			<tr>
 				<td></td>
 				<td style="text-align:right">Delivery Fee</td>
-				<td>$<?=$order->deliveryFee()?></td>
-				<?php if( $isDriverCockpit ) { ?>
+				<td>$<?php echo $order->deliveryFee(); ?></td>
+				<?php if( $isDriverCockpit ) {  ?>
 				<td style="font-size:12px;color:#666;">
 					&mdash;
 				</td>
-				<?php } ?>
+				<?php }  ?>
 			</tr>
-		<? endif ;
+		<?php  }
+
 	}
+
 	?>
 
-	<? if ( $order->restaurant()->fee_customer ) : ?>
+	<?php if ( $order->restaurant()->fee_customer ) { ?>
 		<tr>
 			<td></td>
 			<td style="text-align:right">Service Fee</td>
-			<td>$<?=$order->serviceFee()?></td>
+			<td>$<?php echo $order->serviceFee() ;?></td>
 			<?php if( $isDriverCockpit ) { ?>
 			<td style="font-size:12px;color:#666;">
-				$$<?=$order->serviceFee()?>
+				$<?php echo $order->serviceFee(); ?>
 			</td>
 			<?php } ?>
 		</tr>
-	<? endif ; ?>
+	<?php } ?>
 
 	<tr>
 		<td></td>
@@ -286,19 +291,19 @@ if( $version == 'customer' ){
 	<tr style="font-weight:bold;">
 		<td></td>
 		<td style="text-align:right"><?php if( $order->pay_type == 'card' ) { ?>Gift Card <?php } else { ?> Already Paid by Gift Card <?php } ?></td>
-		<td>$<?=number_format($order->chargedByCredit(),2)?></td>
+		<td>$<?php echo number_format($order->chargedByCredit(),2); ?></td>
 	</tr>
 
 	<tr style="font-weight:bold;">
 		<td></td>
 		<td style="text-align:right"><?php if( $order->pay_type == 'card' ) { ?>Total Charged <?php } else { ?> Total Owed <?php } ?></td>
-		<td>$<?=number_format($order->charged(),2)?></td>
+		<td>$<?php echo number_format($order->charged(),2); ?></td>
 	</tr>
 	<?php } ?>
 
-	<? if ($order->pay_type == 'card' && $order->tip == 0) : ?>
+	<?php if ($order->pay_type == 'card' && $order->tip == 0) { ?>
 		<tr>
 			<td colspan="3" style="text-align:left">Customer is tipping with cash</td>
 		</tr>
-	<? endif ; ?>
+	<?php } ?>
 </table>
