Report how many first time user gift codes used per school per day #4466

--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -68,6 +68,7 @@
 <script src="/assets/cockpit/js/controllers.marketing.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.report.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
@@ -111,4 +112,5 @@
 <script src="/assets/cockpit/js/service.favico.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.blast.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.tv.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.report.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/angular-cached-resource.min.js?v=<?=Deploy_Server::currentVersion()?>"></script><!--Michal added 1-19-15-->
