--- a/include/views/default/cockpit2/frontend/tools/tools.phtml
+++ b/include/views/default/cockpit2/frontend/tools/tools.phtml
@@ -9,6 +9,7 @@
 			<tr><td><a href="/support/phone">Make a call / Send SMS</a></td></tr>
 			<tr><td><a href="/blast">Blasts</a></td></tr>
 			<tr><td><a href="/marketing/outgoing">Marketing: Outgoing Emails/Texts</a></td></tr>
+			<tr><td><a href="/reports">Reports</a></td></tr>
 		</table>
 	</div>
 
